# open_vins

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile.ubuntu-18.04  README.md  Untitled  vcpkg.json
.cursor/rules/: build-verify.mdc  git-commit-zh.mdc
config/euroc_mav/: estimator_config.yaml
docs/: CPI对比文档.md  gs-installing-free.dox  gs-installing.dox  update-zerovelocity.dox  zupt-logic-flow.md  零速度更新公式推导.md
ov_core/: CMakeLists.txt
ov_core/cmake/: ROS1.cmake  ROS2.cmake
ov_core/scripts/: gen_build_info.sh
ov_core/src/: dummy.cpp  test_chi2_consistency.cpp  test_cpi_consistency.cpp  test_dynamic_init.cpp  test_dynamic_mle.cpp  test_profile.cpp  test_simulation.cpp  test_tracking.cpp  test_webcam.cpp
ov_core/src/cam/: CamBase.h  CamEqui.h  CamRadtan.h
ov_core/src/ceres/: Factor_GenericPrior.cpp  Factor_ImageReprojCalib.cpp  Factor_ImuCPIv1.cpp  State_JPLQuatLocal.cpp
ov_core/src/core/: VioManager.cpp  VioManager.h  VioManagerHelper.cpp  VioManagerOptions.h
ov_core/src/cpi/: CpiV1.cpp  CpiV2.cpp
ov_core/src/data_preprocessing/: cpi_model.cpp  cpi_model.h  cpi_sequence.cpp  cpi_sequence.h
ov_core/src/dynamic/: DynamicInitializer.cpp  DynamicInitializer.h
ov_core/src/ext/: VIO联调方案讨论(1).md  ss_vio debug.h  ss_vio.cpp  ss_vio.h  ss_vio_debug.cpp  ss_vio_err.h
ov_core/src/feat/: Feature.cpp  FeatureDatabase.cpp  FeatureDatabase.h  FeatureHelper.h  FeatureInitializer.cpp
ov_core/src/init/: InertialInitializer.cpp  InertialInitializer.h  InertialInitializerOptions.h
ov_core/src/sim/: BsplineSE3.cpp  BsplineSE3.h  Simulator.cpp  Simulator.h  SimulatorInit.cpp  SimulatorInit.h
ov_core/src/state/: Propagator.cpp  Propagator.h  State.cpp  StateHelper.cpp  StateHelper.h
ov_core/src/static/: StaticInitializer.cpp  StaticInitializer.h
ov_core/src/system/: data_bridge.h  ov_core_export.h  vio_interface.cpp  vio_interface.h  vio_interface_api.cpp  vio_interface_api.h
ov_core/src/track/: Grider_FAST.h  Grider_GRID.h  IMUOpticalFlowPredictor.cpp  IMUOpticalFlowPredictor.h  TrackAruco.cpp  TrackBase.cpp  TrackBase.h  TrackDescriptor.cpp  TrackDescriptor.h  TrackKLT.cpp  TrackKLT.h  TrackSIM.cpp
ov_core/src/types/: Landmark.cpp
ov_core/src/update/: UpdaterHelper.cpp  UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterPureRotation.cpp  UpdaterPureRotation.h  UpdaterSLAM.cpp  UpdaterSLAM.h  UpdaterZeroVelocity.cpp  UpdaterZeroVelocity.h
ov_core/src/utils/: acc_bias_soft_limit.h  chi_squared_quantile.h  fs_compat.h  helper.h  opencv_lambda_body.h  opencv_yaml_parse.h  print.cpp  sensor_data.h  timing.h  vio_data_record_play.cpp  vio_data_record_play.h
ov_eval/: CMakeLists.txt
ov_eval/src/: error_comparison.cpp  error_dataset.cpp  format_converter.cpp  live_align_trajectory.cpp  plot_trajectories.cpp  timing_comparison.cpp  timing_flamegraph.cpp  timing_histogram.cpp  timing_percentages.cpp
ov_eval/src/utils/: Loader.h  Recorder.h  string_ops.h
ov_init/: CMakeLists.txt
ov_init/src/dynamic/: DynamicInitializer.cpp  DynamicInitializer.h
ov_init/src/init/: InertialInitializer.cpp  InertialInitializerOptions.h
ov_init/src/static/: StaticInitializer.cpp
ov_msckf/src/: ros1_serial_msckf.cpp
ov_msckf/src/core/: VioManager.cpp  VioManagerOptions.h
ov_msckf/src/ros/: ROS1Visualizer.cpp  ROS2Visualizer.cpp
ov_msckf/src/state/: Propagator.h
ov_ros/: CMakeLists.txt  package.xml
ov_ros/cmake/: ROS1.cmake  ROS2.cmake
ov_ros/config/openvins/: estimator_config.yaml  kalibr_imucam_chain.yaml
ov_ros/launch/: display.rviz  publish_yuv_imu.launch  run_openvins.launch  run_rviz.launch  run_vio.launch  serial.launch
ov_ros/src/: test_sim_meas.cpp  test_sim_repeat.cpp
ov_ros/src/core/: VioManager.h  VioManagerHelper.cpp
ov_ros/src/ros/: ROS1Visualizer.cpp  ROS1Visualizer.h  ROS2Visualizer.cpp  ROS2Visualizer.h
ov_ros/src/state/: Propagator.cpp
ov_ros/src/update/: UpdaterOptions.h  UpdaterSLAM.cpp  UpdaterZeroVelocity.cpp
ov_yuv_parser/: CMakeLists.txt  package.xml
ov_yuv_parser/config/openvins/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ov_yuv_parser/config/openvins ver2/: estimator_config.yaml  kalibr_imu_chain.yaml
ov_yuv_parser/config/openvins_old/: kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ov_yuv_parser/launch/: publish_yuv_imu.launch  run_vio.launch
ov_yuv_parser/scripts/: run_stress_test.sh  run_vio_yuv.sh
ov_yuv_parser/src/: vio_yuv_runner.cpp  yuv_parser.cpp  yuv_to_png.cpp
ov_yuv_parser/src/app/: data_bridge.h  main.cpp  stress_test_stream_loader.cpp  vio_interface.cpp  vio_interface.h  vio_png_runner.cpp  vio_yuv_runner.cpp  yuv_init_datasets_test.cpp  yuv_timestamp_interval_test.cpp  yuv_to_png.cpp
ov_yuv_parser/src/example/: data_bridge_example.cpp
ov_yuv_parser/src/parser/: imu_parser.cpp  imu_parser.h  png_stream_data_loader.cpp  png_stream_data_loader.h  stream_data_loader.cpp  stream_data_loader.h  yuv_parser.cpp  yuv_parser.h
ov_yuv_parser/src/system/: vio_interface.cpp  vio_interface.h
ov_yuv_parser/src/utils/: fs_compat.h
script/: Dockerfile.arm64-glibc229  activate.sh  batch_run_vio_yuv_all_x64.sh  build_arm64_docker.sh  build_arm64_glibc229.sh  build_arm64_vcpkg.sh  build_install_arm64.sh  build_local.sh  build_preset.sh  build_x86_docker.sh  create_deveping.sh  deploy_to_sdcard.sh  download_cmake_for_docker.sh  download_ninja_for_docker.sh  download_vcpkg_deps_for_docker.sh  export_vio_log_metrics.py  generate_vio_metrics_report.py  rebuild_for_size.sh  run_release.conf  run_release.sh  run_ros.sh  run_vio_metrics_pipeline.sh  run_vio_png_runner_x64.sh  run_vio_yuv_runner.sh  run_vio_yuv_runner_x64.sh  run_yuv_init_datasets_test.sh  sync_thirdparty_from_vcpkg.sh  test_deveping1.sh  vio_log_metrics_core.py
yuv_parser/: CMakeLists.txt  package.xml
yuv_parser/config/openvins/: estimator_config.yaml  kalibr_imu_chain.yaml
yuv_parser/config/openvins_old/: estimator_config.yaml
yuv_parser/launch/: run_openvins.launch  run_rviz.launch
yuv_parser/src/: imu_parser.cpp  main.cpp  ros_publisher_node.cpp  yuv_parser.h
(+4 files in other folders)
